# Euronext_Surveillance

./: CMakeLists.txt  CeilingProcessor.h  DbConnector.h  FloorProcessor.h  IProcessor.h  PumpDumpProcessor.h  QuoteProcessor.h  README.md  SpoofingProcessor.h  WashProcessor.h  ffe.sh  multipleViewsWindow.cpp  multipleViewsWindow.h
